network.yml
Description: >

    Jacobs David / Project 2

Parameters:
    EnvName:
        Description: Our Environment name
        Type: String

    VpcCIDR:
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for Public Subnet in the first Avaliability Zone
        Type: String
        Default: 10.0.0.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for Public Subnet in the Second Avaliability Zone
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for Private Subnet in the first Avaliability Zone
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for Private Subnet in the Second Avaliability Zone
        Type: String
        Default: 10.0.3.0/24

    createNatGateway:
        Type: String
        Default: false
        AllowedValues:
            - true
            - false
Conditions:
        EnabledNatGateway: !Equals [ !Ref createNatGateway, 'true' ]
Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref EnvName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvName

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '' ] #select the first AZ from an array of values
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '' ] #select the first AZ from an array of values
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Public Subnet (AZ2)

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Private Subnet (AZ2)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        # DependsOn: InternetGatewayAttachment
        Condition: EnabledNatGateway
        Properties:
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        # DependsOn: InternetGatewayAttachment
        Condition: EnabledNatGateway
        Properties:
            Domain: vpc

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Condition: EnabledNatGateway
        Properties:
            AllocationId: !GetAtt 'NatGateway1EIP.AllocationId'
            SubnetId: !Ref PublicSubnet1

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Condition: EnabledNatGateway
        Properties:
            AllocationId: !GetAtt 'NatGateway2EIP.AllocationId'
            SubnetId: !Ref PublicSubnet2

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Public Routes

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

    PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Condition: EnabledNatGateway
        DependsOn: [ NatGateway1 ]
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            SubnetId: !Ref PrivateSubnet1

#     PrivateRouteTable2:
#         Type: AWS::EC2::RouteTable
#         Properties:
#             VpcId: !Ref VPC
#             Tags:
#                 - Key: Name
#                   Value: !Sub ${EnvName} Private Routes (AZ2)

#     DefaultPrivateRoute2:
#         Type: AWS::EC2::Route
#         Properties:
#             RouteTableId: !Ref PrivateRouteTable2
#             DestinationCidrBlock: 0.0.0.0/0
#             NatGatewayId: !Ref NatGateway2

#     PrivateSubnet2RouteTableAssociation:
#         Type: AWS::EC2::SubnetRouteTableAssociation
#         Properties:
#             RouteTableId: !Ref PrivateRouteTable2
#             SubnetId: !Ref PrivateSubnet2

# Outputs:
#     VPC:
#         Description: VPC created
#         Value: !Ref VPC
#         Export:
#             Name: !Sub ${EnvName}-VPCID

#     VPCPublicRouteTable:
#         Description: Public Routing
#         Value: !Ref PublicRouteTable
#         Export:
#             Name: !Sub ${EnvName}-PUB-ROUTE-TABLE
